# Auto-ai

./: .env.template  .env.template-zh  .envrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  BULLETIN.md  CODE_OF_CONDUCT-zh.md  CONSCIOUSNESS_SYSTEM_IMPLEMENTATION.md  CONSCIOUS_TUI_README.md  CONTRIBUTING-zh.md  DELIVERY_CHECKLIST.md  Dockerfile  FUNCTIONAL_INTEGRATION_CHECK.md  FUTURE_ROADMAP_RADICAL_TUI.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART_CONSCIOUS_TUI.md  QUICKSTART_RADICAL_AUTONOMY.md  QUICKSTART_RADICAL_TUI.md  QUICKSTART_SELF_EVOLUTION.md  RADICAL_AUTONOMY_IMPLEMENTATION.md  RADICAL_TUI_ENHANCEMENT_SUMMARY.md  README.en.md  README.md  README_ORG_EVO.md  SELF_EVOLUTION_IMPLEMENTATION.md  agent_config.json  auto_evolve.py  benchmarks.py  config.yaml  data_ingestion.py  demo_conscious_tui.py  demo_radical_autonomy.py  demo_ultra_radical.py  evaluate_population.py  events.db  final_acceptance_report.json  host_integration_probe.json  (+12 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.dual_ring_runtime/: final_acceptance_report.json  operational_smoke_report.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 1.bug.yml  2.feature.yml
.github/workflows/: benchmarks.yml  ci.yml  pr-label.yml
algorithm_library/: __init__.py  base.py  catalog.py  evaluation.py  lifecycle.py  registry.py
autoai/: __init__.py  __main__.py  command_decorator.py  config_injector.py  orchestrator.py  orchestrator_blueprint.py  singleton.py
autoai/adaptive_arch/: __init__.py  architecture.py
autoai/agents/: __init__.py  ability_adapter.py  agent.py  agent_comm.py  agent_factory.py  agent_fission.py  agent_pool.py  arch_diagnoser.py  arch_refactorer.py  archaeologist.py  archaeologist_dependency.py  async_agent.py  attention_modulation.py  autonomous_loop.py  autonomous_spawner.py  base.py  capability_injector.py  capability_prober.py  ci_auto_builder.py  consciousness_architecture.py  consensus_engine.py  democratic_governance.py  desire_system.py  division_emerger.py  dream_simulator.py  environment_sensor.py  evolution_community.py  evolution_engine.py  executor.py  feedback_processor.py  founder.py  full_evolution_loop.py  health_monitor.py  hive_mind.py  knowledge_mesh.py  meme_propagation.py  memory_adapter.py  meta_evolution.py  protocol_upgrader.py  qa_agent.py  (+20 more)
autoai/app/: CONSCIOUS_TUI.md  async_loop.py  cli.py  commands.py  configurator.py  conscious_tui.py  conscious_tui_examples.py  conscious_tui_integration.py  dashboard.py  dependency_audit.py  i18n.py  main.py  multi_agent_tui.py  setup.py  spinner.py  tui.py  utils.py  zh_CN.json
autoai/autonomy_core/: __init__.py  auditor.py  cognitive_loop.py  cognitive_loop_mixin.py  full_autonomy_mixin.py  goal_emergence_mixin.py  learnable_params.py  open_emergence.py  orchestrator.py  real_executor.py  reasoning_decider.py  reflection_mixin.py
autoai/blueprints/: schema.py
autoai/bootstrap/: __init__.py  bootstrapper.py
autoai/cache/: __init__.py  cache_manager.py
autoai/causal_reasoning/: __init__.py  engine.py
autoai/chaos/: __init__.py  antifragile.py  immune.py
autogpt/: __init__.py  __main__.py  command_decorator.py  config_injector.py  orchestrator.py  orchestrator_blueprint.py
bench_tasks/: task1.txt  task2.txt
configs/: local_autonomous_runtime.example.json
docs/: code-of-conduct.md  configuration-reference.md  contributing.md  evolve_population.md  index.en.md  index.md  plugins.md  quickstart.md  self_improvement.en.md  self_improvement.md  setup.en.md  setup.md  share-your-logs.md  testing.md  usage.en.md  usage.md
dreams/: proposals_20260515.json
dual_ring_ai/: QUICKSTART.md  README.md  __init__.py  config_example.json  main_controller.py  requirements.txt  run.py  test_algorithm_evolution_protocol.py  test_cockpit_expansion.py  test_controlled_skill_lifecycle.py  test_end_to_end_runtime.py  test_external_adapters.py  test_full_backend_evolution.py  test_genesis_delivery_readiness.py  test_genesis_final_50.py  test_genesis_final_acceptance.py  test_genesis_operational_smoke.py  test_genesis_production_readiness.py  test_host_integration_probe.py  test_interaction_and_review_layer.py  test_local_autonomous_runtime.py  test_messaging_gateway.py  test_remaining_architecture_implementation.py  test_remote_llm_adapter.py  test_runtime_artifacts.py  test_security_hardening.py  test_strategist.py  test_system.py  test_terminal_ui_only.py
experience/: autonomous_goals.json  autonomy_loop.jsonl  conversations.sqlite3  periodic_memory.jsonl  records.jsonl  self_model.json  self_state.json  user_models.json
governance/: __init__.py  agents_fleet.json  approval.py  audit.jsonl  audit.py  autonomy_level.py  boundary_manager.py  break_log.jsonl  break_log.py  break_report.py  default_policy.json  experience_store.py  gate.py  modification_chain.py  policy.py  policy_evolver.py  project_fingerprint.py  quota.py  rate_limit.py
openevolve/: CLAUDE.md  Dockerfile  README.md  pyproject.toml  runner.py
sandbox_tests/: test_sandbox.py
schemas/: plugin_schema.json  skill_schema.json
scripts/: _shim.py  approve_fix.py  generate_collective_modules.py  generate_plugins.py  generate_radical_modules.py  init_charter_repo.py  init_dashboard_db.py  init_knowledge_db.py  install_plugin_deps.py  launch_radical_autonomy.py  launch_tui.py  librarian_cli.py  register_new_skills.py  run_blueprint_orchestrator.py  run_executor.py  run_final_acceptance.ps1  run_host_integration_probe.ps1  run_local_operational_smoke.ps1  run_orchestrator.py  skill_cli.py  start_cockpit_api.ps1  start_local_autonomous_runtime.ps1  test_tui.py  use_recommended_skill.py
sessions/: 1b4e77cf.json  2a724d27.json  2c638212.json  428a8d36.json  5ed58970.json  771c137a.json  7f0b17e9.json  86955c63.json  9291ce86.json  9f2c8cee.json  b0115802.json  b0dd0436.json  b1ce75a4.json  daf0e2cf.json  dc8e8cc4.json  e244e7c6.json
tests/: conftest.py  test_radical_tui_enhancement.py
tui_gateway/: cli.py  entry.py  radical_autonomy.py
ui-tui/: .eslintrc.json  package.json  tsconfig.json  vitest.config.ts
(+772 files in other folders)
