[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agpt"
version = "0.4.7"
authors = [
  { name="Torantulino", email="support@agpt.co" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "An open-source attempt to make GPT-4 autonomous"

dependencies = [
    "beautifulsoup4>=4.12.2",
    "colorama==0.4.6",
    "distro==1.8.0",
    "openai>=1.0",
    "playsound==1.2.2",
    "python-dotenv==0.21",
    "pyyaml==6.0.1",
    "PyPDF2",
    "python-docx",
    "markdown",
    "pylatexenc",
    "readability-lxml==0.8.1",
    "requests",
    "tiktoken==0.3.3",
    "gTTS==2.3.1",
    "duckduckgo-search==3.0.2",
    "google-api-python-client",
    "pinecone-client==2.2.1",
    "redis",
    "orjson==3.8.10",
    "ftfy>=6.1.1",
    "Pillow",
    "selenium==4.1.4",
    "webdriver-manager",
    "jsonschema",
    "click",
    "charset-normalizer>=3.1.0",
    "spacy>=3.0.0,<4.0.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl",
    "prompt_toolkit>=3.0.38",
    "pydantic",
    "inflection",
    "agent-protocol>=0.1.1",
    "fastapi",
    "uvicorn",
]

[project.urls]
"Homepage" = "https://github.com/Significant-Gravitas/Auto-GPT"
"Bug Tracker" = "https://github.com/Significant-Gravitas/Auto-GPT"

[project.scripts]
agpt = "autogpt.app.cli:main"

[project.optional-dependencies]
dev = [
    "coverage",
    "flake8",
    "numpy<2",
    "pre-commit",
    "autoflake",
    "black",
    "isort",
    "gitpython==3.1.31",
    "auto-gpt-plugin-template @ git+https://github.com/Significant-Gravitas/Auto-GPT-Plugin-Template@0.1.0",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-table-reader-plugin",
    "pymdown-extensions",
    "mypy",
    "types-Markdown",
    "types-beautifulsoup4",
    "types-colorama",
    "types-Pillow",
    "openapi-python-client==0.13.4",
    "ruff",
]

test = [
    "pytest",
    "asynctest",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-integration",
    "pytest-mock",
    "vcrpy @ git+https://github.com/Significant-Gravitas/vcrpy.git@master",
    "pytest-recording",
    "pytest-xdist",
]

alphaevolve = [
    "flask",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["autogpt", "openevolve/openevolve"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
packages = ["autogpt"]
extend-exclude = '.+/(dist|.venv|venv|build)/.+'


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
skip = '''
    .tox
    __pycache__
    *.pyc
    .env
    venv*/*
    .venv/*
    reports/*
    dist/*

'''

[tool.pytest.ini_options]
markers = [
    "requires_openai_api_key",
    "requires_huggingface_api_key"
]
