[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aai"
version = "0.4.7"
authors = [
  { name="Torantulino", email="support@aai.co" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "基于GPT-4的自主AI代理系统"

dependencies = [
    "openai>=1.30",
    "pyyaml>=6.0.1",
    "requests>=2.31",
    "tiktoken>=0.7",
    "click>=8.1",
    "pydantic>=2.0",
    "gitpython>=3.1.31",
]

[project.urls]
"Homepage" = "https://github.com/Significant-Gravitas/Auto-AI"
"Bug Tracker" = "https://github.com/Significant-Gravitas/Auto-AI"

[project.scripts]
aai = "autoai.app.cli:main"
local-agent = "tui_gateway.cli:main"

[project.optional-dependencies]
dev = [
    "coverage",
    "flake8",
    "numpy<2",
    "pre-commit",
    "autoflake",
    "black",
    "isort",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-table-reader-plugin",
    "pymdown-extensions",
    "mypy",
    "types-Markdown",
    "types-beautifulsoup4",
    "types-Pillow",
    "openapi-python-client>=0.15",
    "ruff",
]

test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-integration",
    "pytest-mock",
    "vcrpy",
    "pytest-recording",
    "pytest-xdist",
]


alphaevolve = [
    "flask",
]

nlp = [
    "spacy>=3.0.0,<4.0.0",
    "zh-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/zh_core_web_sm-3.7.0/zh_core_web_sm-3.7.0-py3-none-any.whl",
]

vector-db = [
    "chromadb",
    "redis",
]

web = [
    "beautifulsoup4>=4.12.2",
    "selenium>=4.18",
    "webdriver-manager",
    "duckduckgo-search==3.0.2",
]

media = [
    "Pillow",
    "PyPDF2",
    "python-docx",
    "pylatexenc",
    "gTTS==2.3.1",
]

interactive = [
    "prompt_toolkit>=3.0.38",
]
api-server = [
    "fastapi",
    "uvicorn",
    "agent-protocol>=0.1.1",
]

format = [
    "orjson>=3.9",
    "ftfy>=6.1.1",
    "jsonschema",
    "charset-normalizer>=3.1.0",
    "google-api-python-client",
    "watchdog",
]

all = [
    "aai[nlp,vector-db,web,media,api-server,format,interactive,dev,test]",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["autoai", "openevolve/openevolve"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
packages = ["autoai"]
extend-exclude = '.+/(dist|.venv|venv|build)/.+'


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
skip = '''
    .tox
    __pycache__
    *.pyc
    .env
    venv*/*
    .venv/*
    reports/*
    dist/*

'''

[tool.pytest.ini_options]
markers = [
    "requires_openai_api_key",
    "requires_huggingface_api_key"
]
